@@ -2376,6 +2376,10 @@ set {
       and replaces them with the words specified</td>
   </tr>
   <tr> 
+    <td><div align="center">j &lt;joins:seconds&gt;</div></td>
+    <td>Throttles joins per-user to <i>joins</i> per <i>seconds</i> seconds</td>
+  </tr>
+  <tr> 
     <td><div align="center">M</div></td>
     <td>A registered nickname (+r) is required to talk</td>
   </tr>
