@@ -165,6 +165,7 @@ help Chmodes {
 	" I <nick!ident@host> = Overrides +i for matching users [h]";
 	" f <floodparams> = Flood protection (for more info see /HELPOP CHMODEF) [o]";
 	" i = A user must be invited to join the channel [h]";
+	" j <joins:sec> = Throttle joins per-user to 'joins' per 'sec' seconds";
 	" k <key> = Users must specify <key> to join [h]";
 	" l <number of max users> = Channel may hold at most <number> of users [o]";
 	" m = Moderated channel (only +vhoaq users may speak) [h]";
